fixed #7225 Event card alignment

--- a/app/styles/partials/event-card.scss
+++ b/app/styles/partials/event-card.scss
@@ -47,7 +47,7 @@
   }
 
   .main.content {
-    padding:100px;
+    padding:101px;
     display: block;
     height: 130px;
   }
